@@ -139,6 +139,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4710: Extract directories properly in the zipfile module;
+  allow adding directories to a zipfile.
+
 - Issue #3807: _multiprocessing build fails when configure is passed 
   --without-threads argument. When this occurs, _multiprocessing will
   be disabled, and not compiled.
